# hhuOS

./: .gitignore  README.md  run.sh
.run/: qemu (BIOS KVM).run.xml  qemu (UEFI KVM).run.xml  qemu-gdb (UEFI).run.xml
cmake/application/: CMakeLists.txt
cmake/application/cube/: CMakeLists.txt
cmake/application/mario/: CMakeLists.txt
cmake/application/mouse/: CMakeLists.txt
cmake/application/platformer/: CMakeLists.txt
cmake/application/polygon/: CMakeLists.txt
cmake/application/snake/: CMakeLists.txt
cmake/application/test/: CMakeLists.txt
cmake/initrd/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/util/: CMakeLists.txt
cmake/lib/util/file/: CMakeLists.txt
cmake/lib/util/game/: CMakeLists.txt
cmake/lib/util/game/collider/: CMakeLists.txt
cmake/lib/util/game/entity/: CMakeLists.txt
cmake/lib/util/game/entity/collider/: CMakeLists.txt
cmake/lib/util/game/entity/component/: CMakeLists.txt
cmake/lib/util/game/entity/event/: CMakeLists.txt
cmake/lib/util/game/event/: CMakeLists.txt
cmake/lib/util/game/scene/: CMakeLists.txt
cmake/lib/util/io/: CMakeLists.txt
cmake/lib/util/log/: CMakeLists.txt
cmake/lib/util/math/: CMakeLists.txt
docs/: GameEngine.md
initrd/game/platformer/scene/: scene1.txt  scene2.txt  scene3.txt
src/application/cube/: Cube.cpp  CubeDemo.cpp  CubeDemo.h  CubeDemoScene.cpp  CubeDemoScene.h  cube.cpp
src/application/mario/: MarioEntity.cpp  MarioEntity.h  MarioGame.cpp  MarioGame.h  MarioGoombaEntity.cpp  MarioGoombaEntity.h  MarioItemBlockEntity.cpp  MarioItemBlockEntity.h  mario.cpp
src/application/mario/block/: MarioBrickBlockEntity.cpp  MarioBrickBlockEntity.h  MarioItemBlockEntity.cpp  MarioItemBlockEntity.h  MarioSolidBlockEntity.cpp  MarioSolidBlockEntity.h
src/application/mario/entity/: MarioEntity.cpp  MarioEntity.h  MarioGoombaEntity.cpp  MarioGoombaEntity.h  MarioMushroomEntity.cpp  MarioMushroomEntity.h
src/application/mario/text/: MarioScoreText.cpp  MarioScoreText.h
src/application/mouse/: MouseGame.cpp  MouseGame.h  MouseGameScene.cpp  MouseGameScene.h  mouse.cpp
src/application/platformer/: PlatformerGame.cpp  PlatformerGame.h  platformer.cpp
src/application/platformer/block/: PlatformerBlockEntity.cpp  PlatformerBlockEntity.h  PlatformerBrickBlockEntity.cpp  PlatformerBrickBlockEntity.h  PlatformerDirtBlockEntity.cpp  PlatformerDirtBlockEntity.h  PlatformerGrassBlockEntity.cpp  PlatformerGrassBlockEntity.h  PlatformerItemBlockEntity.cpp  PlatformerItemBlockEntity.h  PlatformerLavaBlockEntity.cpp  PlatformerLavaBlockEntity.h  PlatformerSolidBlockEntity.cpp  PlatformerSolidBlockEntity.h
src/application/platformer/entity/: PlatformerItemEntity.cpp  PlatformerItemEntity.h  PlatformerMushroomEntity.cpp  PlatformerMushroomEntity.h  PlatformerNinjaEntity.cpp  PlatformerNinjaEntity.h  PlatformerPlayerEntity.cpp  PlatformerPlayerEntity.h  PlatformerPlayerProjectileEntity.cpp  PlatformerPlayerProjectileEntity.h
src/application/platformer/scene/: PlatformerScene.cpp  PlatformerScene.h  PlatformerScene1.cpp  PlatformerScene1.h  PlatformerScene2.cpp  PlatformerScene2.h  PlatformerScene3.cpp  PlatformerScene3.h
src/application/platformer/special/: PlatformerChestEntity.cpp  PlatformerChestEntity.h
src/application/platformer/text/: PlatformerProjectileText.cpp  PlatformerProjectileText.h  PlatformerScoreText.cpp  PlatformerScoreText.h
src/application/polygon/: DemoPolygon.cpp  DemoPolygon.h  DemoPolygonFactory.cpp  DemoPolygonFactory.h  PolygonDemo.cpp  PolygonDemo.h  PolygonDemoScene.cpp  PolygonDemoScene.h  polygon.cpp
src/application/snake/: FoodEntity.cpp  FoodEntity.h  SnakeEntity.cpp  SnakeEntity.h  SnakeGame.cpp  SnakeGame.h  snake.cpp
src/application/snake/entity/: FoodEntity.cpp  FoodEntity.h  SnakeEntity.cpp  SnakeEntity.h
src/application/snake/scene/: SnakeScene.cpp  SnakeScene.h
src/application/snake/text/: SnakeScoreText.cpp  SnakeScoreText.h
src/application/test/: DemoEntity.cpp  DemoEntity.h  DemoSprite.cpp  DemoSprite.h  TestDemo.cpp  TestDemo.h  TestDemoScene.cpp  TestDemoScene.h  test.cpp
src/device/hid/: Keyboard.cpp  Keyboard.h
src/lib/util/file/: File.cpp  File.h
src/lib/util/file/bmp/: BMP.cpp  BMP.h
src/lib/util/file/image/: Image.cpp  Image.h
src/lib/util/game/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameText.cpp  GameText.h  Graphics2D.cpp  Graphics2D.h  GravityEntity.cpp  GravityEntity.h  Polygon.cpp  Polygon.h  RessourceManager.cpp  RessourceManager.h  Sprite.cpp  Sprite.h  SpriteAnimation.cpp  SpriteAnimation.h
src/lib/util/game/collider/: Collider.cpp  Collider.h  RectangleCollider.cpp  RectangleCollider.h
src/lib/util/game/entity/: Entity.cpp  Entity.h
src/lib/util/game/entity/collider/: Collider.cpp  Collider.h  PolygonCollider.cpp  PolygonCollider.h  RectangleCollider.cpp  RectangleCollider.h
src/lib/util/game/entity/component/: Component.cpp  Component.h  GravityComponent.cpp  GravityComponent.h  LinearMovementComponent.cpp  LinearMovementComponent.h
src/lib/util/game/entity/event/: CancelableEvent.cpp  CancelableEvent.h  CollisionEvent.cpp  CollisionEvent.h  Event.cpp  Event.h  TranslateEvent.cpp  TranslateEvent.h
src/lib/util/game/event/: CancelableEvent.cpp  CollisionEvent.cpp  CollisionEvent.h  Event.cpp  Event.h  TransformEvent.cpp  TransformEvent.h  TranslateEvent.cpp
src/lib/util/game/scene/: Scene.cpp  Scene.h
src/lib/util/graphic/: LinearFrameBuffer.cpp  LinearFrameBuffer.h  PixelDrawer.h
src/lib/util/io/: Key.cpp  Key.h  KeyDecoder.cpp  KeyDecoder.h
src/lib/util/log/: Logger.cpp  Logger.h
src/lib/util/math/: Math.cpp  Math.h  Vector2.cpp  Vector2.h
src/lib/util/memory/: Address.cpp  Address.h  String.cpp
src/lib/util/stream/: PrintWriter.cpp  PrintWriter.h
